added titles to the pics and changed the css on the cheveron

--- a/bootstrap-style.css
+++ b/bootstrap-style.css
@@ -48,3 +48,8 @@ p{
 .smallImg {
     width: 4em;
 }
+
+.carousel-control.left, .carousel-control.right {
+   background-image:none !important;
+   filter:none !important;
+}
