changed the carousel to have bigger picture, I think it looks better that way. You can change it back if you want.
Added the extra space to even out the columns

--- a/bootstrap-style.css
+++ b/bootstrap-style.css
@@ -26,10 +26,18 @@ p{
     font-size: 1.2em;
 }
 
+
 .carousel-inner > .item > img, .carousel-inner > .item > a > img {
-    width: 70%;
+    width: 90%;
     margin: auto;
+    margin-bottom: 2em;
+
   }
+
+.customPadding{
+    height:129px;
+    visibility:hidden;
+}
 
 #alert {
     font-size: 1em;
